--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,7 +20,7 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#c0e3e7",
   "background_color": "#ffffff"
